--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,6 +8,7 @@
     tools:context="davidbarbaran.searchmusicrest.SplashActivity">
 
     <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/splash_animation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:lottie_rawRes="@raw/animation_music"
