--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,9 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="white">#FFFFFF</color>
     <color name="transparent">#00000000</color>
+    <color name="gray800">#2A2A2A</color>
+    <color name="gray200">#BDBDBD</color>
+
 </resources>
