--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".HomeActivity">
+    tools:context=".activity.HomeActivity">
 
     <android.support.v7.widget.CardView
         android:id="@+id/search_card_view"
@@ -36,7 +36,7 @@
                 android:fontFamily="@font/montserrat_light"
                 android:text="Buscar"
                 android:textColor="@color/gray200"
-                android:textSize="@dimen/text18" />
+                android:textSize="@dimen/text16" />
 
         </LinearLayout>
 
