--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <dimen name="text16">16sp</dimen>
     <dimen name="text18">18sp</dimen>
+    <dimen name="text20">20sp</dimen>
 
     <dimen name="size56">56dp</dimen>
     <dimen name="size100">100dp</dimen>
